# matmod-7sem

./: .gitignore  README.md  requirements.txt
.ipynb_checkpoints/: CMakeLists-checkpoint.txt
example/ernest/lab1/: Task_1 (2).ipynb  Task_2.ipynb  Отчет к л.р. №1.docx
example/ernest/lab4/: ~$4 (2) (2).docx  ЛР4 (2) (2).docx
example/ilisyr/: Laba2.ipynb
example/lab3/: Lab3.cpp
example/lab4/: LR_5.mw
example/nasty/: ~$Р4 (4).docx  ЛР4 (4).docx
example/rustem/: z2.py  Лабораторная№1.docx  Лабораторная№4.docx
example/tany/: MatMod_LR4__kopia.docx  Mat_Mod_Laba1_Gumerov.docx  Naumova_Tanya_PM-455_laboratornaya_rabota_5.docx  Naumova_laba2.docx  ~$umova_laba2.docx
labs/: CMakeLists.txt
labs/lab1/: CMakeLists.txt  README.md
labs/lab1/alia/: .gitignore  CMakeLists.txt  README.md  full_result.py  lab1.ipynb  log.txt  main.py  path_planeta_3.csv  path_spytnik_0.csv  path_spytnik_1.csv  path_spytnik_2.csv  path_spytnik_3.csv  progressbar.hpp  result.py  task1.cpp
labs/lab1/alia/.ipynb_checkpoints/: lab1-checkpoint.ipynb
labs/lab1/alia/report/: README.md  create_full.py  draw.ipynb  fuel_optimal.txt  fuel_optimal_90.txt  fuel_optimal_accuracity.txt  fuel_optimize.txt  full_fuel.txt  init_value.txt  task1.ipynb  task2.ipynb  task2_create_full.py  task2_create_gif.py  task2_optimal_fuel.py  ЛР1_Галямова.docx
labs/lab1/alia/src/: CMakeLists.txt  task1.cpp  task2.cpp  task2.h  task2_const.h  task2_openmp.h
labs/lab1/misha/: .gitignore  CMakeLists.txt  README.md  lab1.ipynb  result.py  task1.cpp
labs/lab1/misha/.ipynb_checkpoints/: lab1-checkpoint.ipynb
labs/lab1/misha/c++/: CMakeLists.txt  task1.cpp  task2.cpp  temp.cpp
labs/lab1/misha/plot/: full_result.py  log.txt  out_0.csv  out_1.csv  out_2.csv  out_3.csv  path_planeta_0.csv  path_planeta_1.csv  path_planeta_2.csv  path_planeta_3.csv  path_spytnik_0.csv  path_spytnik_1.csv  path_spytnik_2.csv  path_spytnik_3.csv  processing_data.py  result.py
labs/lab1/misha/py/: lab1_new.ipynb  main.py
labs/lab1/misha/report/: create_gif.py  draw.ipynb  fuel_optimal.txt  full_fuel.txt  full_result.py  old.py  task1.ipynb  task1_drawe.py  task2.ipynb  task2_create_gif.py  task2_drawe.py  task2_optimal_fuel.py  test.ipynb  test.py  value_init  ЛР1_Акмурзин.docx
labs/lab1/misha/src/: CMakeLists.txt  task1-boost.cpp  task1-sundials.cpp  task1.cpp  task2.cpp  task2.h  task2_openmp.h
labs/lab1/misha/src/legacy/: task1.cpp
labs/lab1/polina/: .gitignore  lab1_var4.ipynb  lab1_var4_optimize.ipynb  lab1_var4_optimize_v2.ipynb  result.csv  result_accuracity.csv  result_min_dist.json  result_new.csv  result_new_v2.csv  task2_create_gif.py  ЛР1_Eговцева.docx
labs/lab1/polina/result/: min_(259.5_273.5).json  result_accuracity.csv  result_min_dist_258_273.5.json  result_min_dist_309_320.json  result_min_dist_321.json  result_min_dist_66_71.json  result_new copy.csv  result_new.csv
labs/lab2/: README.md
labs/lab2/alia/report/: ЛР2. Галямова.docx
labs/lab2/alia/src/: 11111111.ipynb  faz.mw  pp.mw  stats_tochki.mw
labs/lab2/misha/: README.md  ЛР Акмурзин.docx  ЛР2 Акмурзин.docx
labs/lab2/misha/report/: ~$2 Акмурзин.docx  ЛР2 Акмурзин.docx
labs/lab2/misha/src/: Lab2.mw  Lab2_portret.mw
labs/lab3/: CMakeLists.txt  README.md
labs/lab3/alia/report/: ЛР3_Галямова.docx
labs/lab3/example/: chart.h  main_gumerov.cpp  main_my.cpp
labs/lab3/example/report/: draw.py  ~$чет Купряхина.docx  Отчет Гумеров.docx  Отчет Купряхина.docx  Отчет Насте.docx
labs/lab3/example/src/: CMakeLists.txt  chart.h  main_angelina.cpp  main_er.cpp  main_gumerov.cpp  main_my.cpp  symplectic.h  verle.h
labs/lab3/misha/: CMakeLists.txt  README.md  main.cpp
labs/lab3/misha/include/: chart.h  speed.h  symplectic.h
labs/lab3/misha/report/: draw.py  result  ~$3_Акмурзин.docx  ЛР3_Акмурзин.docx
labs/lab3/misha/src/: .gitignore  CMakeLists.txt  build.py  chart.cpp  chart.h  main.cpp  main.py  main_angelina.cpp  main_er.cpp  main_lib.c  main_lib.h  main_sol.c  main_sol.cpp  main_v2.cpp  speed.cpp  symplectic.cpp  symplectic.h  verle.h
labs/lab4/: CMakeLists.txt
labs/lab4/alia/: main.mw
labs/lab4/alia(7var)/: README.md
labs/lab4/alia(7var)/report/: draw.ipynb  draw.py  ЛР4_Галямова.docx
labs/lab4/alia(7var)/report/.ipynb_checkpoints/: draw-checkpoint.ipynb
labs/lab4/alia(7var)/result/: result.txt  stat_points.txt
labs/lab4/alia(7var)/src/: CMakeLists.txt  main.cpp  main.mw
labs/lab4/misha/: .gitignore
labs/lab4/misha(2var)/: .gitignore  README.md
labs/lab4/misha(2var)/report/: calculation.py  draw.py  ЛР4_Акмурзин.docx
labs/lab4/misha(2var)/src/: CMakeLists.txt  main.cpp  main.mw
labs/lab4/misha/report/: draw.ipynb  ЛР4_Акмурзин.docx
labs/lab4/misha/src/: draw.py  main.cpp  main.mw
